fixed spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,8 @@ body {
  .brand {
    font-size: 2.5em;
    color: white;
+   text-align: left;
+
  }
 
  .brand a {
@@ -23,12 +25,13 @@ body {
  .wrapper {
    margin: 0 auto;
    max-width: 1100px;
-   padding: 5px 10px 5px 10px;
+   padding: 5px 10px 5px 12px;
  }
 
  .intro {
    color: white;
    font-family: 'Libre Baskerville', serif;
+   padding: 30px 0 30px 0;
 
  }
 
